--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        description="Contact us via croissant contact page and order croissant in your locality using our dynamic contact list of mom chefs making their croissant avalaible to the world."
+        content="width=device-width, initial-scale=1.0">
     <title>Contact us | croissant.com</title>
     <link rel="stylesheet" href="/src/styles.css">
 </head>
