--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" description="This is a croissant photo gallery webpage listing different categories of croissants and yummy croissants." content="width=device-width, initial-scale=1.0">
     <title>An example of the perfect Croissant - croissant.com</title>
     <link rel="stylesheet" href="/src/styles.css">
 </head>
